Fix a bug causing dropdown-menu carets disappeared if using overflow auto

--- a/app/assets/stylesheets/dropdown-fb.css.scss
+++ b/app/assets/stylesheets/dropdown-fb.css.scss
@@ -98,8 +98,9 @@
 }
 
 // Menu position and menu carets
-.navbar .dropdown-menu-fb {
+.navbar .dropdown.have-carets.open {
   &:before {
+    z-index: 1000;
     content: '';
     display: inline-block;
     border-left:   7px solid transparent;
@@ -107,18 +108,19 @@
     border-bottom: 7px solid #ccc;
     border-bottom-color: rgba(0,0,0,.2);
     position: absolute;
-    top: -7px;
-    left: 9px;
+    bottom: -1px;
+    left: 18px;
   }
   &:after {
+    z-index: 1000;
     content: '';
     display: inline-block;
     border-left:   6px solid transparent;
     border-right:  6px solid transparent;
     border-bottom: 6px solid #fff;
     position: absolute;
-    top: -6px;
-    left: 10px;
+    bottom: -2px;
+    left: 19px;
   }
 }
 
